packages/mediapipe-task-vision/lib/third_party/mediapipe/mediapipe_vision_bindings.dart

/* Copyright 2023 The MediaPipe Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:mediapipe_core/src/third_party/mediapipe/generated/mediapipe_common_bindings.dart'
    as imp1;

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<ImageClassifierOptions>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>)>(symbol: 'image_classifier_create')
external ffi.Pointer<ffi.Void> image_classifier_create(
  ffi.Pointer<ImageClassifierOptions> options,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
);

@ffi.Native<
        ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<MpImage>,
            ffi.Pointer<ImageClassifierResult>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>)>(
    symbol: 'image_classifier_classify_image')
external int image_classifier_classify_image(
  ffi.Pointer<ffi.Void> classifier,
  ffi.Pointer<MpImage> image,
  ffi.Pointer<ImageClassifierResult> result,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ImageClassifierResult>)>(
    symbol: 'image_classifier_close_result')
external void image_classifier_close_result(
  ffi.Pointer<ImageClassifierResult> result,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>)>(symbol: 'image_classifier_close')
external int image_classifier_close(
  ffi.Pointer<ffi.Void> classifier,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
);

abstract class ImageFormat {
  static const int UNKNOWN = 0;
  static const int SRGB = 1;
  static const int SRGBA = 2;
  static const int GRAY8 = 3;
  static const int SBGRA = 11;
}

abstract class RunningMode {
  static const int IMAGE = 1;
  static const int VIDEO = 2;
  static const int LIVE_STREAM = 3;
}

final class ImageFrame extends ffi.Struct {
  @ffi.Int32()
  external int format;

  external ffi.Pointer<ffi.Uint8> image_buffer;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;
}

final class GpuBuffer extends ffi.Struct {
  @ffi.Int()
  external int height;

  @ffi.Int()
  external int width;
}

final class MpImage extends ffi.Struct {
  @ffi.Int32()
  external int type;

  external UnnamedUnion1 unnamed;
}

final class UnnamedUnion1 extends ffi.Union {
  external ImageFrame image_frame;

  external GpuBuffer gpu_buffer;
}

final class ImageClassifierOptions extends ffi.Struct {
  external imp1.BaseOptions base_options;

  @ffi.Int32()
  external int running_mode;

  external imp1.ClassifierOptions classifier_options;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ImageClassifierResult>,
              ffi.Pointer<MpImage>, ffi.Int64)>> result_callback_fn;

  @ffi.Int()
  external int result_callback;
}

typedef ImageClassifierResult = imp1.ClassificationResult;

const int IMAGE_FRAME = 0;

const int GPU_BUFFER = 1;

const int __bool_true_false_are_defined = 1;

const int true1 = 1;

const int false1 = 0;

const int __WORDSIZE = 64;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int USER_ADDR_NULL = 0;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;
